Kubernetes/database-manifest.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: database

---
# StatefulSet
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - image: postgres:latest
        name: database
        ports:
        - containerPort: 5432
          name: database
        volumeMounts:
        - name: postgres-persistent-volume-claim
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-persistent-volume-claim
        persistentVolumeClaim:
          claimName: postgres-persistent-volume-claim
