Kubernetes/frontend-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
  selector:
    app: frontend

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: CONTAINER-REGISTRY-ACCESS-SECRET
      containers:
      - name: frontend
        image: CONTAINER-REGISTRY-IMAGE-URL
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
